--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,8 @@
-/* styles.css */
+/*
+ * Globals
+ */
 
-/* General */
+/* Alignment */
 .center {
     margin: auto;
     align-self: center;
@@ -42,7 +44,23 @@ h2 {
     font-weight: bold;
 }
 
-/* Button */
+/* Links */
+a,
+a:focus,
+a:hover {
+    color: #fff;
+}
+
+/* Custom default button */
+.btn-default,
+.btn-default:hover,
+.btn-default:focus {
+    color: #333;
+    text-shadow: none; /* Prevent inheritence from `body` */
+    background-color: #fff;
+    border: 1px solid #fff;
+}
+
 .btn {
     display: inline-block;
     padding: 10px 20px;
@@ -67,6 +85,25 @@ h2 {
 .btn-danger:hover {
     background-color: #a71d2a;
 }
+
+/*
+ * Base structure
+ */
+
+html,
+body {
+    height: 100%;
+    background-color: #fff;
+}
+
+/*
+ * Header
+ */
+
+
+/*
+ * Table
+ */
 
 .styled-table {
     border-collapse: collapse;
@@ -98,4 +135,16 @@ h2 {
 
 .styled-table tbody tr:last-of-type {
     border-bottom: 2px solid #009879;
+}
+
+/*
+ * Cover
+ */
+
+.cover {
+    padding: 0 20px;
+}
+.cover .btn-lg {
+    padding: 10px 20px;
+    font-weight: bold;
 }
