--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,96 +1,21 @@
-/*
- * Globals
- */
-
-/* Alignment */
-.center {
-    margin: auto;
-    align-self: center;
-    display: flex;
+.styled-table td:nth-child(1) {
+    width: 200px; /* Atur lebar sesuai kebutuhan */
+    max-width: 200px; /* Batasi lebar maksimum jika diperlukan */
+    word-wrap: break-word; /* Memastikan teks panjang memanjang ke bawah */
 }
 
-/* Container */
-.container {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-    font-family: sans-serif;
+ .styled-table td:nth-child(2) {
+    width: 400px; /* Atur lebar sesuai kebutuhan */
+    max-width: 400px; /* Batasi lebar maksimum jika diperlukan */
+    word-wrap: break-word; /* Memastikan teks panjang memanjang ke bawah */
 }
 
-/* Heading */
-h1 {
-    color: #333;
-    text-align: center;
+
+.styled-table td:nth-child(7) {
+    width: 180px; /* Atur lebar sesuai kebutuhan */
+    max-width: 180px; /* Batasi lebar maksimum jika diperlukan */
+    word-wrap: break-word; /* Memastikan teks panjang memanjang ke bawah */
 }
 
-h2 {
-    color: #333;
-}
 
-/* Task List */
-.task-list {
-    list-style: none;
-    padding: 0;
-}
 
-.task-list li {
-    margin-bottom: 10px;
-    padding: 10px;
-    background-color: #f5f5f5;
-    border-radius: 5px;
-}
-
-.task-list li .task-name {
-    font-weight: bold;
-}
-
-/* Links */
-a,
-a:focus,
-a:hover {
-    color: #fff;
-}
-
-/*
- * Header
- */
-
-/*
- * Table
- */
-
-.styled-table {
-    border-collapse: collapse;
-    margin: 25px 0;
-    font-size: 0.9em;
-    font-family: sans-serif;
-    min-width: 400px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-}
-
-.styled-table thead tr {
-    background-color: #009879;
-    color: #ffffff;
-    text-align: left;
-}
-
-.styled-table th,
-.styled-table td {
-    padding: 12px 15px;
-}
-
-.styled-table tbody tr {
-    border-bottom: 1px solid #dddddd;
-}
-
-.styled-table tbody tr:nth-of-type(even) {
-    background-color: #f3f3f3;
-}
-
-.styled-table tbody tr:last-of-type {
-    border-bottom: 2px solid #009879;
-}
-
-/*
- * Cover
- */
